--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -185,7 +185,11 @@
     "last": "dernière",
     "donate": "Faire un don",
     "donate-zcash": "{{donate}} en Zcash",
+    "donate-monero": "{{donate}} en Monero",
+    "donate-nano": "{{donate}} en Nano",
     "donate-bat": "{{donate}} avec Brave",
     "donate-card": "Don unique par carte",
-    "donate-recurrent": "Don récurrent par carte"
+    "donate-recurrent": "Don récurrent par carte",
+    "copy": "Copier l'adresse dans le presse-papiers",
+    "copied": "Adresse copiée dans le presse-papiers"
 }
