--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -5,7 +5,7 @@
     "about.me.title": "Minusta",
     "about.me": "Nimeni on Clement. Otan valokuvia koskemattomasta luonnosta ja muistiinpanoja seikkailuistani. Löysin itseni keskeltä ei-mitään, taistelemassa elementtejä vastaan ja törmäystesteissä kestävyyttäni. Liftasin yli 40 000 kilometriä ja vietin satoja päiviä läpi aavikoiden, teiden, sademetsien, kylien ja elämäntapojen. Minua voi pitää seikkailijana, insinöörinä, erämaan ja ihmisen tutkimusmatkailijana. Mutta en ole lahjakas, ja sinä voit tehdä samoin, jahdata unelmiasi! Me kaikki tarvitsemme tarkoituksen elämässä. Minun tarkoitukseni on elää suurimpia unelmiani mahdollisimman yksinkertaisella tavalla ja jakaa ne. Istuvassa elämässäni pidän teknisten asioiden rakentamisesta. Itse asiassa tein tämän verkkosivuston tyhjästä. Nauti vierailustasi digitaalisessa puutarhassani!",
     "about.pledge": "Valokuvaus on minun tutkimustyökaluni tavalla, joka laajentaa horisonttiamme kohti syrjäistä erämaata. Todistan valokuvilla, että kauneimmat asiat ovat luonnollisia. Mutta valokuvat eivät pidä lunta huipuilla, alkuperäisiä metsiä, villieläimiä, kristallinkirkkaita jokia, puhtaita vuoristojärviä. Meidän tehtävämme on ajatella ja toimia kestävästi niin, että kauneus on yli kaiken ja luonto ikuinen.",
-    "contact.title": "Sinusta",
+    "contact.title": "Yhteystiedot",
     "contact.why": "Anna minulle palautetta, jaa ajatuksiasi ja projektejasi, kerro lisää itsestäsi.",
     "name": "Nimi:",
     "email": "Sähköpostiosoite:",
@@ -23,12 +23,6 @@
     "unknown-error-verbose": "Tapahtui odottamaton palvelinvirhe! \uD83D\uDE35",
     "wait": "Odota",
     "thanks": "Kiitos!",
-    "newsletter": "Seuraa matkaani",
-    "newsletter.what": "henkilökohtaisia muistiinpanoja ulkoilmasta.",
-    "newsletter.when": "Kun uutta sisältöä on saatavilla, ei usein.",
-    "newsletter.trash": "Voit peruuttaa tilauksen milloin tahansa.",
-    "subscribe": "Tilaa",
-    "unsubscribe": "Poistuminen",
     "rss-feed": "RSS-syöte",
     "copyright": "Tekijänoikeus",
     "copyright.under": "on saatavilla",
@@ -53,7 +47,7 @@
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
     "status.link": "Käy tilasivulla",
     "privacy.title": "Yksityisyys on tärkeää",
-    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja. Lahjoitukset käsitellään myös kolmannen osapuolen toimesta turvallisten tapahtumien varmistamiseksi, en pääse käsiksi luottokorttitietoihisi.",
+    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi lukuun ottamatta sähköpostiosoitettasi, jos otat minuun yhteyttä. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja. Lahjoitukset käsitellään myös kolmannen osapuolen toimesta turvallisten tapahtumien varmistamiseksi, en pääse käsiksi luottokorttitietoihisi.",
     "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
     "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
     "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
