--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
     "about.me.title": "About Me",
     "about.me": "My name is Clement. I take photos of the untouched nature and notes of my adventures. I found myself in the middle of nowhere, fighting the elements and crash testing my resiliency. I hitchhiked more than 40,000 km and spent hundreds days through deserts, roads, rainforests, villages, lifestyles. You can consider me as adventurer, engineer, wilderness and human explorer. But I am not gifted and you can do the same, chase your dreams! We all need a purpose in life. Mine is to live my greatest dreams in the simplest possible way, and share them. In my sedentary life, I like building technical things. Indeed, I made this website from scratch. Enjoy your visit in my digital garden!",
     "about.pledge": "Photography is my exploration tool in a way to widen our horizon toward remote wilderness. I prove with photos that the most beautiful things are natural. But photos do not keep snow on tops, native forests, wildlife, crystal clear rivers, pure mountain lakes. It's up to us to think and act sustainably so that beauty is beyond all and nature perpetual.",
-    "contact.title": "About You",
+    "contact.title": "Contact",
     "contact.why": "Please give me feedback, share your thoughts and projects, tell me more about you.",
     "name": "Name:",
     "email": "Email:",
@@ -23,12 +23,6 @@
     "unknown-error-verbose": "An unexpected server error happened! \uD83D\uDE35",
     "wait": "Wait a sec",
     "thanks": "Thanks!",
-    "newsletter": "Follow My Journey",
-    "newsletter.what": "Personal notes related to backcountry.",
-    "newsletter.when": "When new content is published, not often.",
-    "newsletter.trash": "You can unsubscribe any time.",
-    "subscribe": "Subscribe",
-    "unsubscribe": "Unsubscribe",
     "rss-feed": "RSS Feed",
     "copyright": "Copyright",
     "copyright.under": "licensed under",
@@ -53,7 +47,7 @@
     "status.notice": "Before reporting a bug, you could check the current network status.",
     "status.link": "Visit the status page",
     "privacy.title": "Privacy Matters",
-    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automagically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information. Donations are also handled by a third party to ensure secure transactions, I cannot access your credit card details.",
+    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information except your email address if you contact me. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information. Donations are also handled by a third party to ensure secure transactions, I cannot access your credit card details.",
     "privacy.third-parties.title": "Integrated Third Parties:",
     "privacy.third-parties.policy": "Read the privacy policy",
     "privacy.third-parties.host": "This website is hosted by",
