--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -5,7 +5,7 @@
     "about.me.title": "À propos de moi",
     "about.me": "Yo, c'est Clément. Je prends des photos de la nature sauvage et des notes de mes aventures. Je me suis retrouvé au milieu de nulle part, à lutter contre les éléments et à tester ma résilience. J'ai fait plus de 40 000 km en auto-stop et passé des centaines de jours à travers les déserts, les routes, les forêts tropicales, les villages, les modes de vie. Considères-moi comme un aventurier, un ingénieur, un explorateur de la nature sauvage et de la nature humaine. Mais je ne suis pas un surdoué et tu peux en faire autant, même mieux, chasses tes rêves ! Nous avons tous besoin d'un but. Le mien est de vivre mes plus grands rêves le plus simplement possible, et de les partager. Dans ma vie sédentaire, j'ai des projets techniques. J'ai réalisé ce site web de zéro. Bonne visite dans mon jardin numérique !",
     "about.pledge": "La photographie est mon outil d'exploration en vue d'élargir notre horizon vers des contrées éloignées. Je prouve avec des photos que les plus belles choses sont naturelles. Mais mes photos ne gardent pas la neige sur les sommets, les forêts primaires, la vie indigène, les rivières cristallines, la pureté des les lacs de montagne. C'est à nous de penser et d'agir durablement pour que la beauté soit au-delà de tout et la nature perpétuelle.",
-    "contact.title": "À propos de toi",
+    "contact.title": "Me contacter",
     "contact.why": "Fais-moi part de tes réactions, partage tes réflexions et tes projets, dis-m'en plus sur toi.",
     "name": "Nom :",
     "email": "Couriel :",
@@ -23,12 +23,6 @@
     "unknown-error-verbose": "Une erreur de serveur inattendue s'est produite ! \uD83D\uDE35",
     "wait": "Minute papillon",
     "thanks": "Merci !",
-    "newsletter": "Des Nouvelles !",
-    "newsletter.what": "Notes personnelles liées à la nature.",
-    "newsletter.when": "Quand y'a du nouveau contenu, pas souvent.",
-    "newsletter.trash": "Tu peux te désinscrire à tout moment.",
-    "subscribe": "S'abonner",
-    "unsubscribe": "Se désabonner",
     "rss-feed": "Flux RSS",
     "copyright": "Droit d'auteur",
     "copyright.under": "sous licence",
@@ -53,7 +47,7 @@
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
     "status.link": "Visiter la page d'état",
     "privacy.title": "La vie privée compte",
-    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations. Les dons sont également gérés par un tiers pour garantir la sécurité des transactions. Je ne peux pas accéder aux détails de ta carte bancaire.",
+    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf ton adresse email si tu me contact. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations. Les dons sont également gérés par un tiers pour garantir la sécurité des transactions. Je ne peux pas accéder aux détails de ta carte bancaire.",
     "privacy.third-parties.title": " Tiers intégrés :",
     "privacy.third-parties.policy": "Lire la politique de confidentialité",
     "privacy.third-parties.host": "Ce site web est hébergé chez",
