Refactor tippy menus

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,5 @@
 {
     "about": "About",
-    "about.tooltip": "Find out more",
     "about.title": "Clément's Garden",
     "about.me.title": "About Me",
     "about.me": "My name is Clement. I take photos of the untouched nature and notes of my adventures. I found myself in the middle of nowhere, fighting the elements and crash testing my resiliency. I hitchhiked more than 40,000 km and spent hundreds days through deserts, roads, rainforests, villages, lifestyles. You can consider me as adventurer, engineer, wilderness and human explorer. But I am not gifted and you can do the same, chase your dreams! We all need a purpose in life. Mine is to live my greatest dreams in the simplest possible way, and share them. In my sedentary life, I like building technical things. Indeed, I made this website from scratch. Enjoy your visit in my digital garden!",
@@ -73,11 +72,12 @@
     "photo.title": "Photography",
     "photo.open-story.tooltip": "Read the story",
     "open-this-story.tooltip": "{{photo.open-story.tooltip}}:",
-    "stories-overview": "Stories overview",
-    "stories.title": "All Published Stories",
+    "stories": "Adventures",
+    "stories.title": "All Published Adventures",
     "photo.open-story.pre-title": "From the story:",
     "story.title": "The Story Behind the Photography",
     "story.open-photo.tooltip": "See the photography",
+    "photo": "Photos",
     "story.open-any-photo.tooltip": "See the gallery",
     "map.data": "Map data ",
     "map.improve": "Improve this map",
