--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -1,6 +1,5 @@
 {
     "about": "Tietoja",
-    "about.tooltip": "Lue lisää",
     "about.title": "Clémentin puutarha",
     "about.me.title": "Minusta",
     "about.me": "Nimeni on Clement. Otan valokuvia koskemattomasta luonnosta ja muistiinpanoja seikkailuistani. Löysin itseni keskeltä ei-mitään, taistelemassa elementtejä vastaan ja törmäystesteissä kestävyyttäni. Liftasin yli 40 000 kilometriä ja vietin satoja päiviä läpi aavikoiden, teiden, sademetsien, kylien ja elämäntapojen. Minua voi pitää seikkailijana, insinöörinä, erämaan ja ihmisen tutkimusmatkailijana. Mutta en ole lahjakas, ja sinä voit tehdä samoin, jahdata unelmiasi! Me kaikki tarvitsemme tarkoituksen elämässä. Minun tarkoitukseni on elää suurimpia unelmiani mahdollisimman yksinkertaisella tavalla ja jakaa ne. Istuvassa elämässäni pidän teknisten asioiden rakentamisesta. Itse asiassa tein tämän verkkosivuston tyhjästä. Nauti vierailustasi digitaalisessa puutarhassani!",
@@ -73,11 +72,12 @@
     "photo.title": "Valokuvaus",
     "photo.open-story.tooltip": "Lue tarina",
     "open-this-story.tooltip": "{{photo.open-story.tooltip}}:",
-    "stories-overview": "Tarinoiden yleiskatsaus",
-    "stories.title": "Kaikki julkaistut tarinat",
+    "stories": "Seikkailut",
+    "stories.title": "Kaikki julkaistut seikkailut",
     "photo.open-story.pre-title": "Tarinasta:",
     "story.title": "Tarina valokuvauksen takana",
     "story.open-photo.tooltip": "Katso valokuvaus",
+    "photo": "Kuvat",
     "story.open-any-photo.tooltip": "Katso galleria",
     "map.data": "Karttatiedot ",
     "map.improve": "Parantaa tätä karttaa",
