--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,6 +1,5 @@
 {
     "about": "À propos",
-    "about.tooltip": "En savoir plus",
     "about.title": "Le jardin de Clément",
     "about.me.title": "À propos de moi",
     "about.me": "Yo, c'est Clément. Je prends des photos de la nature sauvage et des notes de mes aventures. Je me suis retrouvé au milieu de nulle part, à lutter contre les éléments et à tester ma résilience. J'ai fait plus de 40 000 km en auto-stop et passé des centaines de jours à travers les déserts, les routes, les forêts tropicales, les villages, les modes de vie. Considères-moi comme un aventurier, un ingénieur, un explorateur de la nature sauvage et de la nature humaine. Mais je ne suis pas un surdoué et tu peux en faire autant, même mieux, chasses tes rêves ! Nous avons tous besoin d'un but. Le mien est de vivre mes plus grands rêves le plus simplement possible, et de les partager. Dans ma vie sédentaire, j'ai des projets techniques. J'ai réalisé ce site web de zéro. Bonne visite dans mon jardin numérique !",
@@ -73,12 +72,13 @@
     "photo.title": "Photographie",
     "photo.open-story.tooltip": "Lire l'aventure",
     "open-this-story.tooltip": "{{photo.open-story.tooltip}} :",
-    "stories-overview": "Aperçu des aventures",
+    "stories": "Aventures",
     "stories.title": "Toutes les aventures publiées",
     "photo.open-story.pre-title": "De l'aventure :",
     "story.title": "L'aventure de la photographie",
     "story.open-photo.tooltip": "Voir la photographie",
-    "story.open-any-photo.tooltip": "Voir la gallerie photo",
+    "photo": "Photos",
+    "story.open-any-photo.tooltip": "Voir la galerie photo",
     "map.data": "Données cartographiques ",
     "map.improve": "Améliorer la carte",
     "night": "Nuit en",
