--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -184,5 +184,6 @@
     "donate-card": "Kertalahjoitus kortilla",
     "donate-recurrent": "Toistuva lahjoitus kortilla",
     "copy": "Kopioi osoite leikepöydälle",
-    "copied": "Osoite kopioitu leikepöydälle"
+    "copied": "Osoite kopioitu leikepöydälle",
+    "modified-icon": "muutettu"
 }
