--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -184,5 +184,6 @@
     "donate-card": "Don unique par carte",
     "donate-recurrent": "Don récurrent par carte",
     "copy": "Copier l'adresse dans le presse-papiers",
-    "copied": "Adresse copiée dans le presse-papiers"
+    "copied": "Adresse copiée dans le presse-papiers",
+    "modified-icon": "modifié"
 }
