--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -171,6 +171,7 @@
     "cam.exposure": "Valotusaika:",
     "cam.f-number": "Aukkosuhde:",
     "cam.iso": "Valoherkkyys:",
+    "cam.mode": "Laskennallinen kuvaustoimi:",
     "cam.lat": "Leveysaste:",
     "cam.lon": "Pituusaste:",
     "cam.goto": "Paikana:",
