--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -171,6 +171,7 @@
     "cam.exposure": "Temps d'exposition :",
     "cam.f-number": "Ouverture géométrique :",
     "cam.iso": "Sensibilité :",
+    "cam.mode": "Mode photographie assistée :",
     "cam.lat": "Latitude :",
     "cam.lon": "Longitude :",
     "cam.goto": "Localiser avec :",
