--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -181,7 +181,8 @@
     "donate-monero": "{{donate}} Moneron avulla",
     "donate-nano": "{{donate}} Nanon kanssa",
     "donate-bat": "{{donate}} Brave-selaimella",
-    "donate-card": "Kertalahjoitus kortilla",
+    "donate-kofi": "Kertaluonteinen lahjoitus kortilla Ko-fi -alustalla",
+    "donate-card": "Kertaluonteinen lahjoitus kortilla",
     "donate-recurrent": "Toistuva lahjoitus kortilla",
     "copy": "Kopioi osoite leikepöydälle",
     "copied": "Osoite kopioitu leikepöydälle",
