--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -181,6 +181,7 @@
     "donate-monero": "{{donate}} en Monero",
     "donate-nano": "{{donate}} en Nano",
     "donate-bat": "{{donate}} avec Brave",
+    "donate-kofi": "Don unique par carte avec Ko-fi",
     "donate-card": "Don unique par carte",
     "donate-recurrent": "Don récurrent par carte",
     "copy": "Copier l'adresse dans le presse-papiers",
