Remove contact form

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,22 +6,7 @@
     "about.pledge": "Photography is my exploration tool in a way to widen our horizon toward remote wilderness. I prove with photos that the most beautiful things are natural. But photos do not keep snow on tops, native forests, wildlife, crystal clear rivers, pure mountain lakes. It's up to us to think and act sustainably so that beauty is beyond all and nature perpetual.",
     "contact.title": "Contact",
     "contact.why": "Please give me feedback, share your thoughts and projects, tell me more about you.",
-    "name": "Name:",
-    "email": "Email:",
-    "message": "Message:",
-    "report-bug": "Report a bug",
-    "encrypt-pgp": "Email encrypted with PGP",
-    "read-privacy": "Read the Privacy Policy",
-    "send": "Send",
-    "alternative-send": "Alternatively, send me a message with:",
-    "invalid-email": "Invalid email address!",
-    "invalid-message": "Say something!",
-    "too-many-requests": "Too many requests!",
-    "is-bot": "Are you human? \uD83E\uDD16",
-    "unknown-error": "Try again later.",
-    "unknown-error-verbose": "An unexpected server error happened! \uD83D\uDE35",
-    "wait": "Wait a sec",
-    "thanks": "Thanks!",
+    "mailto": "Email",
     "rss-feed": "RSS Feed",
     "copyright": "Copyright",
     "copyright.under": "licensed under",
@@ -42,21 +27,6 @@
     "download": "Download",
     "download.signature": "Signature",
     "font": "Font",
-    "status.title": "Status Page",
-    "status.notice": "Before reporting a bug, you could check the current network status.",
-    "status.link": "Visit the status page",
-    "privacy.title": "Privacy Matters",
-    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information except your email address if you contact me. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information. Donations are also handled by a third party to ensure secure transactions, I cannot access your credit card details.",
-    "privacy.third-parties.title": "Integrated Third Parties:",
-    "privacy.third-parties.policy": "Read the privacy policy",
-    "privacy.third-parties.host": "This website is hosted by",
-    "privacy.third-parties.emails": "Emails are handled by",
-    "privacy.third-parties.messages": "Your messages are stored by",
-    "privacy.third-parties.maps": "The maps are supplied by",
-    "privacy.third-parties.cdn": "Some scripts are delivered by",
-    "privacy.third-parties.captcha": "Spam and abuse protection by",
-    "privacy.third-parties.card": "Payment cards are handled by",
-    "privacy.contact": "Should you need more enlightenment, please feel free to use the contact form.",
     "social-networks": "Social Networks",
     "cancel": "Cancel",
     "close": "Close",
