--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -6,22 +6,7 @@
     "about.pledge": "Valokuvaus on minun tutkimustyökaluni tavalla, joka laajentaa horisonttiamme kohti syrjäistä erämaata. Todistan valokuvilla, että kauneimmat asiat ovat luonnollisia. Mutta valokuvat eivät pidä lunta huipuilla, alkuperäisiä metsiä, villieläimiä, kristallinkirkkaita jokia, puhtaita vuoristojärviä. Meidän tehtävämme on ajatella ja toimia kestävästi niin, että kauneus on yli kaiken ja luonto ikuinen.",
     "contact.title": "Yhteystiedot",
     "contact.why": "Anna minulle palautetta, jaa ajatuksiasi ja projektejasi, kerro lisää itsestäsi.",
-    "name": "Nimi:",
-    "email": "Sähköpostiosoite:",
-    "message": "Viesti:",
-    "report-bug": "Ilmoita vikaestä",
-    "encrypt-pgp": "PGP:llä salattu sähköposti",
-    "read-privacy": "Lue tietosuojakäytäntö",
-    "send": "Lähetä",
-    "alternative-send": "Vaihtoehtoisesti voit lähettää minulle viestin:",
-    "invalid-email": "Virheellinen sähköpostiosoite!",
-    "invalid-message": "Sano jotain!",
-    "too-many-requests": "Liian monta pyyntöä!",
-    "is-bot": "Oletko ihminen? \uD83E\uDD16",
-    "unknown-error": "Yritä myöhemmin uudelleen.",
-    "unknown-error-verbose": "Tapahtui odottamaton palvelinvirhe! \uD83D\uDE35",
-    "wait": "Odota",
-    "thanks": "Kiitos!",
+    "mailto": "Sähköpostiosoite",
     "rss-feed": "RSS-syöte",
     "copyright": "Tekijänoikeus",
     "copyright.under": "on saatavilla",
@@ -42,21 +27,6 @@
     "download": "Lataa",
     "download.signature": "Allekirjoitus",
     "font": "Fontti",
-    "status.title": "Tilasivu",
-    "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
-    "status.link": "Käy tilasivulla",
-    "privacy.title": "Yksityisyys on tärkeää",
-    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi lukuun ottamatta sähköpostiosoitettasi, jos otat minuun yhteyttä. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja. Lahjoitukset käsitellään myös kolmannen osapuolen toimesta turvallisten tapahtumien varmistamiseksi, en pääse käsiksi luottokorttitietoihisi.",
-    "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
-    "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
-    "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
-    "privacy.third-parties.emails": "Sähköpostit käsittelee",
-    "privacy.third-parties.messages": "Viestisi tallennetaan",
-    "privacy.third-parties.maps": "Kartat on toimittaa",
-    "privacy.third-parties.cdn": "Jotkin skriptit toimittaa",
-    "privacy.third-parties.captcha": "Roskapostin ja väärinkäytön suojattu",
-    "privacy.third-parties.card": "Maksukortit käsittelee",
-    "privacy.contact": "Jos tarvitset lisävalaistusta, käytä yhteydenottolomaketta.",
     "social-networks": "Sosiaaliset verkostot",
     "cancel": "Peruuta",
     "close": "Sulje",
