--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -6,22 +6,7 @@
     "about.pledge": "La photographie est mon outil d'exploration en vue d'élargir notre horizon vers des contrées éloignées. Je prouve avec des photos que les plus belles choses sont naturelles. Mais mes photos ne gardent pas la neige sur les sommets, les forêts primaires, la vie indigène, les rivières cristallines, la pureté des les lacs de montagne. C'est à nous de penser et d'agir durablement pour que la beauté soit au-delà de tout et la nature perpétuelle.",
     "contact.title": "Me contacter",
     "contact.why": "Fais-moi part de tes réactions, partage tes réflexions et tes projets, dis-m'en plus sur toi.",
-    "name": "Nom :",
-    "email": "Couriel :",
-    "message": "Message :",
-    "report-bug": "Signaler un bogue",
-    "encrypt-pgp": "Email chiffré avec PGP",
-    "read-privacy": "Lire la politique de confidentialité",
-    "send": "Envoyer",
-    "alternative-send": "Tu peux aussi m'envoyer un message via :",
-    "invalid-email": "Adresse courriel invalide !",
-    "invalid-message": "Dis quelque chose !",
-    "too-many-requests": "Trop de demandes !",
-    "is-bot": "Es-tu humain ? \uD83E\uDD16",
-    "unknown-error": "Réessayer plus tard.",
-    "unknown-error-verbose": "Une erreur de serveur inattendue s'est produite ! \uD83D\uDE35",
-    "wait": "Minute papillon",
-    "thanks": "Merci !",
+    "mailto": "Couriel",
     "rss-feed": "Flux RSS",
     "copyright": "Droit d'auteur",
     "copyright.under": "sous licence",
@@ -42,21 +27,6 @@
     "download": "Télécharger",
     "download.signature": "Signature",
     "font": "Police",
-    "status.title": "Page d'état",
-    "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
-    "status.link": "Visiter la page d'état",
-    "privacy.title": "La vie privée compte",
-    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf ton adresse email si tu me contact. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations. Les dons sont également gérés par un tiers pour garantir la sécurité des transactions. Je ne peux pas accéder aux détails de ta carte bancaire.",
-    "privacy.third-parties.title": " Tiers intégrés :",
-    "privacy.third-parties.policy": "Lire la politique de confidentialité",
-    "privacy.third-parties.host": "Ce site web est hébergé chez",
-    "privacy.third-parties.emails": "Les couriels sont traités par",
-    "privacy.third-parties.messages": "Les messages sont stoqués chez",
-    "privacy.third-parties.maps": "Les cartes sont fournis par",
-    "privacy.third-parties.cdn": "Certains scripts sont fournis par",
-    "privacy.third-parties.captcha": "Protection contre le spam et les abus par",
-    "privacy.third-parties.card": "Les cartes de paiement sont traitées par",
-    "privacy.contact": "Si t'as besoin de plus d'informations, n'hésites pas à utiliser le formulaire de contact.",
     "social-networks": "Réseaux sociaux",
     "cancel": "Annuler",
     "close": "Fermer",
