--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,6 +47,7 @@
     "photo.open-story.pre-title": "From the story:",
     "story.title": "The Story Behind the Photography",
     "story.open-photo.tooltip": "See the photography",
+    "story-to-photo": "See photos from this trip",
     "photo": "Photos",
     "story.open-any-photo.tooltip": "See the gallery",
     "map.data": "Map data ",
