--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -47,6 +47,7 @@
     "photo.open-story.pre-title": "Tarinasta:",
     "story.title": "Tarina valokuvauksen takana",
     "story.open-photo.tooltip": "Katso valokuvaus",
+    "story-to-photo": "Katso kuvia tältä matkalta",
     "photo": "Kuvat",
     "story.open-any-photo.tooltip": "Katso galleria",
     "map.data": "Karttatiedot ",
