--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,6 +47,7 @@
     "photo.open-story.pre-title": "De l'aventure :",
     "story.title": "L'aventure de la photographie",
     "story.open-photo.tooltip": "Voir la photographie",
+    "story-to-photo": "Voir les photos de ce voyage",
     "photo": "Photos",
     "story.open-any-photo.tooltip": "Voir la galerie photo",
     "map.data": "Données cartographiques ",
