--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -48,6 +48,7 @@
     "story.title": "Tarina valokuvauksen takana",
     "story.open-photo.tooltip": "Katso valokuvaus",
     "story-to-photo": "Katso kuvia tältä matkalta",
+    "story-to-gallery": "Tutustu galleriaan",
     "photo": "Kuvat",
     "story.open-any-photo.tooltip": "Katso galleria",
     "map.data": "Karttatiedot ",
