--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -48,6 +48,7 @@
     "story.title": "L'aventure de la photographie",
     "story.open-photo.tooltip": "Voir la photographie",
     "story-to-photo": "Voir les photos de ce voyage",
+    "story-to-gallery": "Découvrir la galerie",
     "photo": "Photos",
     "story.open-any-photo.tooltip": "Voir la galerie photo",
     "map.data": "Données cartographiques ",
