--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,6 +48,7 @@
     "story.title": "The Story Behind the Photography",
     "story.open-photo.tooltip": "See the photography",
     "story-to-photo": "See photos from this trip",
+    "story-to-gallery": "Discover the gallery",
     "photo": "Photos",
     "story.open-any-photo.tooltip": "See the gallery",
     "map.data": "Map data ",
