Add dry/rainy seasons

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -124,7 +124,9 @@
         "winter": "Winter",
         "spring": "Spring",
         "summer": "Summer",
-        "autumn": "Autumn"
+        "autumn": "Autumn",
+        "rainy": "Rainy season",
+        "dry": "Dry season"
     },
     "mapbox": {
         "FullscreenControl.Enter": "Enter fullscreen",
