--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -124,7 +124,9 @@
         "winter": "Hiver",
         "spring": "Printemps",
         "summer": "Été",
-        "autumn": "Automne"
+        "autumn": "Automne",
+        "rainy": "Saison des pluies",
+        "dry": "Saison sèche"
     },
     "mapbox": {
         "FullscreenControl.Enter": "Entrer en mode plein écran",
