--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -50,6 +50,7 @@
     "story-to-photo": "See photos from this trip",
     "story-to-gallery": "Discover the gallery",
     "photo": "Photos",
+    "blog": "Blog",
     "story.open-any-photo.tooltip": "See the gallery",
     "map.data": "Map data ",
     "map.improve": "Improve this map",
