--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -50,6 +50,7 @@
     "story-to-photo": "Voir les photos de ce voyage",
     "story-to-gallery": "Découvrir la galerie",
     "photo": "Photos",
+    "blog": "Blog",
     "story.open-any-photo.tooltip": "Voir la galerie photo",
     "map.data": "Données cartographiques ",
     "map.improve": "Améliorer la carte",
