--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -50,6 +50,7 @@
     "story-to-photo": "Katso kuvia tältä matkalta",
     "story-to-gallery": "Tutustu galleriaan",
     "photo": "Kuvat",
+    "blog": "Blogi",
     "story.open-any-photo.tooltip": "Katso galleria",
     "map.data": "Karttatiedot ",
     "map.improve": "Parantaa tätä karttaa",
