--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -12,16 +12,7 @@
     "copyright.under": "sous licence",
     "copyright.content": "Le contenu est {{copyright.under}}",
     "copyright.source": "Le code source est {{copyright.under}}",
-    "copyright.third-parties.link": "autres",
-    "copyright.third-parties.title": "Contenu tiers",
-    "copyright.third-parties.details": "Ce site web comprend les images suivantes :",
-    "copyright.third-parties.project": "Projet",
-    "copyright.third-parties.license": "Licence",
-    "copyright.third-parties.icon": "Icône",
-    "copyright.third-parties.icon.creator": "Réalisé par",
     "from": "disponible via",
-    "copyright.third-parties.from": "Source",
-    "copyright.third-parties.ionicons": "Autres icônes : ",
     "copyright.agreed": "Je m'engage à respecter la licence.",
     "download.title": "Télécharger la photo pleine grandeur",
     "download": "Télécharger",
@@ -164,5 +155,5 @@
     "donate-recurrent": "Don récurrent par carte",
     "copy": "Copier l'adresse dans le presse-papiers",
     "copied": "Adresse copiée dans le presse-papiers",
-    "modified-icon": "modifié"
+    "unless-specified": "Naviguer dans le code source pour trouver les licences."
 }
