--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -155,5 +155,6 @@
     "donate-recurrent": "Toistuva lahjoitus kortilla",
     "copy": "Kopioi osoite leikepöydälle",
     "copied": "Osoite kopioitu leikepöydälle",
-    "unless-specified": "Etsi lisensoitu sisältö lähdekoodista."
+    "unless-specified": "Etsi lisensoitu sisältö lähdekoodista.",
+    "subscribe": "Tilaa uutiskirje."
 }
