--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,6 +155,5 @@
     "donate-recurrent": "Recurrent donation with card",
     "copy": "Copy address to clipboard",
     "copied": "Address copied to clipboard",
-    "unless-specified": "Navigate the source code to find licensed content.",
-    "subscribe": "Subscribe to the newsletter."
+    "unless-specified": "Navigate the source code to find licensed content."
 }
