--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -155,6 +155,5 @@
     "donate-recurrent": "Don récurrent par carte",
     "copy": "Copier l'adresse dans le presse-papiers",
     "copied": "Adresse copiée dans le presse-papiers",
-    "unless-specified": "Naviguer dans le code source pour trouver les licences.",
-    "subscribe": "M'abonner à la newsletter."
+    "unless-specified": "Naviguer dans le code source pour trouver les licences."
 }
