fix mode translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,6 +141,21 @@
     "cam.f-number": "Focal ratio:",
     "cam.iso": "Film speed:",
     "cam.mode": "Computational mode:",
+    "cam.mode.value": {
+        "live composite": "live composite",
+        "live ND2 (1EV)": "live ND2 (1EV)",
+        "live ND4 (2EV)": "live ND4 (2EV)",
+        "live ND8 (3EV)": "live ND8 (3EV)",
+        "live ND16 (4EV)": "live ND16 (4EV)",
+        "live ND32 (5EV)": "live ND32 (5EV)",
+        "live ND64 (6EV)": "live ND64 (6EV)",
+        "live time/bulb": "live time/bulb",
+        "HDR1": "HDR1",
+        "HDR2": "HDR2",
+        "tripod high resolution": "tripod high resolution",
+        "focus-stacked": "focus-stacked",
+        "hand-held high res": "hand-held high res"
+    },
     "cam.lat": "Latitude:",
     "cam.lon": "Longitude:",
     "cam.goto": "Locate with:",
