--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -141,6 +141,21 @@
     "cam.f-number": "Aukkosuhde:",
     "cam.iso": "Valoherkkyys:",
     "cam.mode": "Laskennallinen kuvaustoimi:",
+    "cam.mode.value": {
+        "live composite": "elävä komposiitti",
+        "live ND2 (1EV)": "elävä ND2 (1EV)",
+        "live ND4 (2EV)": "elävä ND4 (2EV)",
+        "live ND8 (3EV)": "elävä ND8 (3EV)",
+        "live ND16 (4EV)": "elävä ND16 (4EV)",
+        "live ND32 (5EV)": "elävä ND32 (5EV)",
+        "live ND64 (6EV)": "elävä ND64 (6EV)",
+        "live time/bulb": "elävä time/bulb",
+        "HDR1": "HDR1 (suuri dynaaminen alue)",
+        "HDR2": "HDR2 (suuri dynaaminen alue)",
+        "tripod high resolution": "korkean res jalustalla",
+        "focus-stacked": "tarkennuksen pinoaminen",
+        "hand-held high res": "kädessä pidettävän korkean res"
+    },
     "cam.lat": "Leveysaste:",
     "cam.lon": "Pituusaste:",
     "cam.goto": "Paikana:",
