--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -141,6 +141,21 @@
     "cam.f-number": "Ouverture géométrique :",
     "cam.iso": "Sensibilité :",
     "cam.mode": "Mode photographie assistée :",
+    "cam.mode.value": {
+        "live composite": "composite en direct",
+        "live ND2 (1EV)": "ND2 directe (1EV)",
+        "live ND4 (2EV)": "ND4 directe (2EV)",
+        "live ND8 (3EV)": "ND8 directe (3EV)",
+        "live ND16 (4EV)": "ND16 directe (4EV)",
+        "live ND32 (5EV)": "ND32 directe (5EV)",
+        "live ND64 (6EV)": "ND64 directe (6EV)",
+        "live time/bulb": "obturation longue en directe",
+        "HDR1": "HDR1 (grande plage dynamique)",
+        "HDR2": "HDR2 (grande plage dynamique)",
+        "tripod high resolution": "haute rés avec trépied",
+        "focus-stacked": "empilement de mises au point",
+        "hand-held high res": "haute rés tenue à la main"
+    },
     "cam.lat": "Latitude :",
     "cam.lon": "Longitude :",
     "cam.goto": "Localiser avec :",
